--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,7 @@
         ],
         "react/react-in-jsx-scope": 0,
         "linebreak-style": 0,
-        "@typescript-eslint/no-empty-interface": 0
-        
+        "@typescript-eslint/no-empty-interface": 0,
+        "react/no-unescaped-entities": 0
     }
 }
