--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "dev"
+    "preview": "dev",
+    "start": "node dist/index.4ec7a517.js"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
