--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "dev",
-    "start": "node dist/index.4ec7a517.js"
+    "preview": "dev"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
