--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "start": "node server.js",
     "preview": "dev"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
     "@types/swiper": "^6.0.0",
+    "express": "^4.18.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
