--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
         "react/no-unescaped-entities": 0,
         "@typescript-eslint/no-empty-function": 0,
         "no-mixed-spaces-and-tabs": 0,
-        "@typescript-eslint/no-var-requires": 0
+        "@typescript-eslint/no-var-requires": 0,
+        "no-undef": 0
     }
 }
